// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Prisma Schema Generator > generatePrismaSchema > should generate basic schema with datasource and generator 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate many-to-one relationship 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}

model User {
  id        String   @id @default(cuid())
  name         String?
  from_Post_author Post[]  @relation("Post_author")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Post {
  id        String   @id @default(cuid())
  title        String?
  authorId     String? @map("author")
  author       User?  @relation("Post_author", fields: [authorId], references: [id])
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate model with basic fields 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}

model User {
  id        String   @id @default(cuid())
  name         String
  email        String
  age          Int?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate model with checkbox field 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}

model Post {
  id        String   @id @default(cuid())
  title        String?
  isPublished  Boolean @default(false)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate model with timestamp field 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}

model Post {
  id        String   @id @default(cuid())
  title        String?
  publishedAt  DateTime?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate multiple models 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "postgresql"
}

model User {
  id        String   @id @default(cuid())
  name         String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Post {
  id        String   @id @default(cuid())
  title        String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Comment {
  id        String   @id @default(cuid())
  content      String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate one-to-many relationship 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.opensaas/prisma-client"
}

datasource db {
  provider = "sqlite"
}

model User {
  id        String   @id @default(cuid())
  name         String?
  posts        Post[]
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Post {
  id        String   @id @default(cuid())
  title        String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should use custom opensaasPath for generator output 1`] = `
"generator client {
  provider = "prisma-client"
  output   = "../.custom-path/prisma-client"
}

datasource db {
  provider = "sqlite"
}
"
`;
